syntax = "proto3";

package ca.stefanm.e39.proto;

import "ConfigProto.proto";

message PicoToPi {
  enum MessageType {
    EmptyMessage = 0;
    HeartbeatRequest = 1;
    HeartbeatResponse = 2;

    //For the logger on the pico to shuttle to Rpi.
    LogStatement = 3;

    //Dump the config object
    ConfigStatusResponse = 4;

    //TODO we could have a mechanism where the pi sends to the pico
    //TODO the number of ibus events it processed (knob turn messages?)
    //TODO and if the pico isn't receiveng this heartbeat often enough,
    //TODO it could auto-restart the PI.
    PiSoftPowerRestartX = 5; //Ask the RPI to restart the X server
    PiSoftPowerRestartPi = 6; //Ask the RPI to legit restart
  }

  MessageType messageType = 1;

  oneof body {
    ca.stefanm.e39.proto.ConfigProto configMessage = 2;
    string loggerStatement = 3;
  }
}